// Root build.gradle for multi-module project
plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.0' apply false
    id 'io.spring.dependency-management' version '1.1.4'
    id 'org.openapi.generator' version '7.5.0' apply false
    id 'idea' // For IntelliJ IDEA support
}

allprojects {
    group = 'com.academy'
    version = '1.0.0'
    
    repositories {
        mavenCentral()
    }
}

// Root project - no source compilation, only module management
project(':') {
    // Remove Java plugin completely from root
    afterEvaluate {
        if (plugins.hasPlugin('java')) {
            // Completely disable Java plugin for root
            sourceSets {
                main {
                    java {
                        srcDirs = [] // No source directories
                    }
                    resources {
                        srcDirs = [] // No resource directories
                    }
                }
                test {
                    java {
                        srcDirs = [] // No test directories
                    }
                    resources {
                        srcDirs = [] // No test resource directories
                    }
                }
            }
            
            // Disable all Java-related tasks
            tasks.matching { it.name.startsWith('compile') || it.name.startsWith('process') || it.name.startsWith('jar') }.all {
                enabled = false
            }
        }
    }
    
    // Disable test tasks for root project
    tasks.withType(Test) {
        enabled = false
    }
    
    // Configure IDEA plugin for root project
    idea {
        module {
            // Exclude old src directory and build artifacts from IDE
            excludeDirs += file('src')
            excludeDirs += file('build')
            excludeDirs += file('target')
        }
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'
    
    sourceCompatibility = '22'
    targetCompatibility = '22'
    
    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }
    
    ext {
        mapstructVersion = '1.5.5.Final'
        lombokVersion = '1.18.38'
        testcontainersVersion = '1.19.3'
        openApiGeneratorVersion = '7.5.0'
        swaggerAnnotationsVersion = '2.2.22'
        jacksonDatabindVersion = '0.2.6'
    }
    
    dependencyManagement {
        imports {
            mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
        }
    }
    
    // Configure annotation processors
    tasks.withType(JavaCompile) {
        options.compilerArgs = [
            '-parameters' // Preserve parameter names for better error messages
        ]
        
        // Suppress warnings about unknown enum constants during annotation processing
        // These are false positives from Lombok processing before JPA/Jackson classes are available
        // The warnings occur because annotation processors run in a separate compilation phase
        options.compilerArgs.addAll([
            '-Xlint:-processing', // Disable processing warnings
            '-Xmaxwarns', '10000' // Allow many warnings (these are false positives)
        ])
        
        // Suppress deprecation warnings
        options.deprecation = false
        
        // Configure annotation processor path to include required dependencies
        // This helps reduce false positive warnings about enum constants
        doFirst {
            if (configurations.findByName('annotationProcessor') != null) {
                // Ensure annotation processors can access JPA and Jackson classes
                def apPath = configurations.annotationProcessor
                if (configurations.findByName('compileClasspath') != null) {
                    // Add compile classpath to annotation processor path for enum access
                    options.annotationProcessorPath = apPath
                }
            }
        }
    }
}

// Configure Lombok for all subprojects
configure(subprojects) {
    dependencies {
        compileOnly "org.projectlombok:lombok:${lombokVersion}"
        annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    }
}
